<resources>
    <string name="app_name">Grocers</string>
    <string name="vegetables">Vegetables</string>
    <string name="cereals">Cereals</string>
    <string name="fruits">Fruits</string>
    <string name="vegetables_tag">Buy fresh and tasty vegetables</string>
    <string name="fruits_tag">Buy fresh and juicy fruits</string>
    <string name="mango">Mango</string>
    <string name="carrot">Carrot</string>
    <string name="coriander">Coriander</string>
    <string name="potato">Potato</string>
    <string name="tomato">Tomato</string>
    <string name="cereals_tag">Cereals from the best farms of India</string>
    <string name="lentils">Lentils</string>
    <string name="wheat">Wheat</string>
    <string name="dal">Dal</string>
    <string name="rice">Rice</string>
    <string name="banana">Banana</string>
    <string name="apple">Apple</string>
    <string name="watermelon">Watermelon</string>
    <string name="back">BAck</string>
    <string name="cart">Cart</string>
    <string name="shop">Shop</string>
</resources>
