<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ProductGrid">

    <LinearLayout
        android:id="@+id/vegetables"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/curved_yellow"
        android:orientation="horizontal"
        android:padding="10dp">

        <ImageView
            android:id="@+id/vegetables_img"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/vegetables"
            android:src="@drawable/ic_vegetable" />

        <TextView
            android:id="@+id/vegetables_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/roboto_slab"
            android:text="@string/vegetables"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@android:color/black"
            android:textSize="25sp"
            android:textStyle="normal" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/fruits"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/curved_green"
        android:orientation="horizontal"
        android:padding="10dp">

        <ImageView
            android:id="@+id/fruits_img"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/vegetables"
            android:src="@drawable/ic_summer" />

        <TextView
            android:id="@+id/fruits_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/roboto_slab"
            android:text="@string/fruits"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@android:color/black"
            android:textSize="25sp"
            android:textStyle="normal" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/cereals"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/curved_orange"
        android:orientation="horizontal"
        android:padding="10dp">

        <ImageView
            android:id="@+id/cereals_img"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/vegetables"
            android:src="@drawable/ic_rice" />

        <TextView
            android:id="@+id/cereals_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/roboto_slab"
            android:text="@string/cereals"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@android:color/black"
            android:textSize="25sp"
            android:textStyle="normal" />
    </LinearLayout>

</LinearLayout>